scribble-assertions/src/test/resources/good/extensions/annotations/ChoiceWithAnnot.scr
module good.extensions.annotations.ChoiceWithAnnot;


type <java> "java.lang.Integer" from "rt.jar" as Int;


global protocol Proto1(role A, role B, role C)
{
	choice at A {
		ADD(x:Int) from A to B;  
		ADD(z:Int) from B to C;
		 
	} or {
		RES(y:Int) from A to B;
		RES(z:Int) from B to C; 
	}			}
	
	RES(z) from B to C; 
}